fix background not showing in github pages

--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@ body {
     min-height: 100vh;
     margin: 0;
     margin-bottom: auto;
-    background-image: url(/images/backgroundImage.jpg);
+    background-image: url(images/backgroundImage.jpg);
 }
 .mainBody {
     display: flex;
